Improve two start page links

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -73,7 +73,7 @@
           <li><a href='https://git-scm.com/book/en/v2'>
               Pro Git
           </a></li>
-          <li><a href='https://www.atlassian.com/git/tutorials/'>
+          <li><a href='https://www.atlassian.com/git/tutorials/setting-up-a-repository'>
               Atlassian Git Tutorial
           </a></li>
         </ul>
@@ -167,7 +167,7 @@
           <li><a href='https://what-if.xkcd.com'>
               what if?
           </a></li>
-          <li><a href='http://userfriendly.org'>
+          <li><a href='http://ars.userfriendly.org/cartoons'>
               userfriendly.org
           </a></li>
           <li><a href='http://www.smbc-comics.com'>
