Add two links to start page

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -179,6 +179,9 @@
           <li><a href='http://phdcomics.com/comics.php'>
               PHD Comics
           </a></li>
+          <li><a href='http://dilbert.com'>
+              Dilbert
+          </a></li>
         </ul>
       </div>
       <div class='list'>
@@ -200,6 +203,9 @@
       <div class='list'>
         <p>Other Stuff</p>
         <ul>
+          <li><a href='http://www.wolframalpha.com'>
+              WolframAlpha
+          </a></li>
           <li><a href='https://www.youtube.com/feed/subscriptions'>
               YouTube
           </a></li>
