Update start page links

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -101,14 +101,17 @@
           <li><a href='http://en.cppreference.com/w'>
               cppreference.com
           </a></li>
-          <li><a href='http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines'>
-              C++ Core Guidelines
-          </a></li>
           <li><a href='https://isocpp.org/faq'>
               C++ FAQ
           </a></li>
           <li><a href='https://isocpp.org'>
               isocpp.org
+          </a></li>
+          <li><a href='https://www.youtube.com/user/CppCon/videos'>
+              CppCon
+          </a></li>
+          <li><a href='http://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines'>
+              C++ Core Guidelines
           </a></li>
           <li><a href='http://cppcast.com'>
               CppCast
@@ -212,6 +215,11 @@
           <li><a href='http://www.imdb.com'>
               IMDb
           </a></li>
+          <!--
+          <li><a href='resource://extension-at-one-tab-dot-com/onetab/data/onetab.html'>
+              OneTab
+          </a></li>
+          -->
         </ul>
       </div>
     </div>
