--- a/startpage/index.html
+++ b/startpage/index.html
@@ -196,6 +196,9 @@
           <li><a href='http://www.computerbase.de'>
               ComputerBase
           </a></li>
+          <li><a href='https://news.ycombinator.com'>
+              Hacker News
+          </a></li>
           <!--
           <li><a href='https://twitter.com/'>
               Twitter
